# deep-rl-from-scratch

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
configs/: cartpole_dqn.yaml  cartpole_linear_q.yaml  cartpole_random.yaml  frozenlake_q.yaml  lunarlander_dqn.yaml  minatar_asterix_dqn.yaml  minatar_breakout_dqn.yaml  minatar_breakout_dqn_all3.yaml  minatar_breakout_dqn_double.yaml  minatar_breakout_dqn_dueling.yaml  minatar_breakout_dqn_nstep3.yaml  minatar_breakout_dqn_rmsprop.yaml  minatar_freeway_dqn.yaml  minatar_seaquest_dqn.yaml  minatar_seaquest_dqn_lr1e4.yaml  minatar_seaquest_dqn_lr5e4.yaml  minatar_seaquest_dqn_rmsprop.yaml  minatar_space_invaders_dqn.yaml  minatar_space_invaders_dqn_lr1e4.yaml  minatar_space_invaders_dqn_lr5e4.yaml  minatar_space_invaders_dqn_rmsprop.yaml
rl/: train.py
rl/agents/: base.py  dqn.py  q_learning.py  random_agent.py
rl/buffers/: base.py  replay.py
rl/common/: checkpoint.py  config.py  evaluation.py  logging.py  seeding.py
rl/envs/: make.py  wrappers.py
rl/networks/: conv.py  mlp.py
scripts/: eval_checkpoint.py  extract_history.py  watch.py
tests/: test_dqn.py  test_harness.py  test_minatar.py  test_run_capture.py
