[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-rl-from-scratch"
version = "0.1.0"
description = "DQN, PPO, and SAC implemented from scratch in PyTorch on a shared training harness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.13.0",
    # box2d (LunarLander) needs swig at install time: brew install swig
    "gymnasium[classic-control,toy-text,box2d]==1.3.0",
    "numpy==2.5.1",
    "wandb==0.28.1",       # default logger
    "tensorboard==2.21.0", # offline fallback logger
    "pyyaml==6.0.3",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1"]

# Deferred to later phases — install when the phase starts, not before:
#   minatar              (Phase 1, discrete-track benchmarks)
#   gymnasium[mujoco]    (Phases 2-3, continuous track)
#   procgen / craftax    (Phase 4 capstone — env undecided)

[tool.setuptools.packages.find]
include = ["rl*"]
